changed spacing on footer links and filter btns from column gap to padding/margin to respond to iOS spacing issues.

--- a/src/App.css
+++ b/src/App.css
@@ -213,11 +213,11 @@ a:visited {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  column-gap: 1rem;
+  /* column-gap: 1rem; */
 }
 
 .filter-btn {
-  margin: 0;
+  margin: 0 0.25rem;
 }
 
 /* BEGIN ITEM DETAILS CSS */
@@ -508,7 +508,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 2rem;
+  /* column-gap: 2rem; */
   background-color: #ec042c;
   color: white;
   z-index: 2;
@@ -516,7 +516,7 @@ footer {
 
 .footer-icon {
   fill: white;
-  padding: 0;
+  padding: 0 1rem;
   margin: 0;
   width: 1.5rem;
   height: 1.5rem;
@@ -628,7 +628,6 @@ footer {
 @media screen and (min-width: 875px) and (max-width: 979px) {
   .shop-overall-container {
     grid-template-columns: 1fr 1fr;
-    /* column-gap: 0.25rem; */
     width: 75%;
     margin: 0 auto;
   }
@@ -825,12 +824,13 @@ footer {
     max-height: calc(0.5 * var(--about-image-width));
   }
 
-  #filter-btn-container {
+  /* #filter-btn-container {
     column-gap: 0.25rem;
-  }
+  } */
 
   .filter-btn {
     font-size: 0.8rem;
+    margin: 0 0.25rem;
   }
 
   #item-details-img {
